@@ -9,6 +9,7 @@ Changelog
 0.4 (unreleased)
 ----------------
 * Color links in reference widget according to their state. [tiberich #3561]
+* Add default location field to content type entries [tiberich #3544]
 
 0.3 (2010-08-16)
 ----------------
